website pribadi arelia maia

--- a/aboutme.html
+++ b/aboutme.html
@@ -59,31 +59,18 @@
                         <li>Programming, I want to create an application that can help many people</li>
                         <li>Writing, I want to make a story that can be enjoyed by readers and what is in the emotional story can reach the reader. It's like magic</li>
                     </ul>
+
+
+                    <p><b> skills :</b> <br>
+                            
+                        <ul>
+                           <li>HTML</li>
+                           <li>CSS</li>
+                        </ul>
                     </p>
             </div>
 
 
-            <section id="hham">
-                    <div class="container">
-                        <p><b> skills :</b> <br>
-                            
-                        <ul>
-                            <li>HTML<div class="bar">
-                                <span class="nilai HTML">35% </span>
-                                </div>
-                            </li>
-                            <li> CSS<div class="bar">
-                                    <span class="nilai CSS">25% </span>
-                                    </div>
-                            </li>
-                            <li> JAVA<div class="bar">
-                                    <span class="nilai JAVA">20% </span>
-                                    </div>
-                            </li>
-                        </ul>
-
-                    </div>
-                </section>
 
             </div>
             </div>
