--- a/aboutme.html
+++ b/aboutme.html
@@ -60,12 +60,12 @@
                         <li>Writing, I want to make a story that can be enjoyed by readers and what is in the emotional story can reach the reader. It's like magic</li>
                     </ul>
 
-
                     <p><b> skills :</b> <br>
                             
                         <ul>
                            <li>HTML</li>
                            <li>CSS</li>
+                           <li>Memasak</li>
                         </ul>
                     </p>
             </div>
