website pribadi arelia maia

--- a/aboutme.html
+++ b/aboutme.html
@@ -66,6 +66,7 @@
                            <li>HTML</li>
                            <li>CSS</li>
                            <li>Memasak</li>
+                           <li>Gambar</li>
                         </ul>
                     </p>
             </div>
